Adding stm32 complibility

--- a/ESP_CPU_Monitor/.vscode/settings.json
+++ b/ESP_CPU_Monitor/.vscode/settings.json
@@ -18,7 +18,8 @@
   ],
   "files.associations": {
     "freertos.h": "c",
-    "task.h": "c"
+    "task.h": "c",
+    "cpu_usage.h": "c"
   },
   "idf.flashType": "UART"
 }
