--- a/Examples/ESP32/main/CMakeLists.txt
+++ b/Examples/ESP32/main/CMakeLists.txt
@@ -2,6 +2,7 @@ idf_component_register(
     SRCS
         "main.c"
         "../../../MCUSilk/CPU_usage.c"
+        "../../../MCUSilk/isr_trace.c"
     INCLUDE_DIRS
         "."
         "../../../MCUSilk"
